--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,18 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+
+    // Dependencies for local unit tests
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    testCompile "org.mockito:mockito-all:1.10.19"
+    testCompile "org.hamcrest:hamcrest-all:1.3"
+    testCompile "org.powermock:powermock-module-junit4:1.6.2"
+    testCompile "org.powermock:powermock-api-mockito:1.6.2"
+
+
+    androidTestCompile "com.android.support.test:runner:1.0.1"
+    androidTestCompile "com.android.support.test:rules:1.0.1"
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.sothree.slidinguppanel:library:3.4.0'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
@@ -49,4 +59,5 @@ dependencies {
     compile 'me.saket:better-link-movement-method:2'
     compile 'me.zhanghai.android.materialprogressbar:library:1.4.2'
     implementation project(':multilevelexpindlistview')
+
 }
