--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-
     defaultConfig {
         applicationId "io.github.httpmattpvaughn.hnapp"
         minSdkVersion 16
@@ -11,16 +10,13 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     flavorDimensions "mock"
-
     // If you need to add more flavors, consider using flavor dimensions.
     productFlavors {
         mock {
@@ -28,14 +24,12 @@ android {
         }
         prod
     }
-
     // Always show the result of every unit test, even if it passes.
     testOptions.unitTests.all {
         testLogging {
             events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
         }
     }
-
     sourceSets {
         main {
             res.srcDirs = [
@@ -47,6 +41,7 @@ android {
             java.srcDirs = ['src/main/java']
         }
     }
+    buildToolsVersion '27.0.3'
 }
 
 dependencies {
@@ -59,24 +54,20 @@ dependencies {
     implementation 'com.android.support:preference-v7:27.0.2'
     implementation 'com.android.support:preference-v14:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-
     // Dependencies for local unit tests
     testImplementation 'junit:junit:4.12'
-    testCompile "org.mockito:mockito-all:1.10.19"
-    testCompile "org.hamcrest:hamcrest-all:1.3"
-    testCompile "org.powermock:powermock-module-junit4:1.6.2"
-    testCompile "org.powermock:powermock-api-mockito:1.6.2"
-
-
-    androidTestCompile "com.android.support.test:runner:1.0.1"
-    androidTestCompile "com.android.support.test:rules:1.0.1"
+    testImplementation 'org.mockito:mockito-all:1.10.19'
+    testImplementation 'org.hamcrest:hamcrest-all:1.3'
+    testImplementation 'org.powermock:powermock-module-junit4:1.6.2'
+    testImplementation 'org.powermock:powermock-api-mockito:1.6.2'
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test:rules:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.sothree.slidinguppanel:library:3.4.0'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.google.code.gson:gson:2.8.2'
-    compile 'me.saket:better-link-movement-method:2'
-    compile 'me.zhanghai.android.materialprogressbar:library:1.4.2'
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'me.saket:better-link-movement-method:2'
+    implementation 'me.zhanghai.android.materialprogressbar:library:1.4.2'
     implementation project(':multilevelexpindlistview')
-
 }
