--- a/multilevelexpindlistview/build.gradle
+++ b/multilevelexpindlistview/build.gradle
@@ -17,7 +17,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:recyclerview-v7:27.0.2'
 }
